JIRA TASK #: 739 Feat: complete dark mode migration to all component and global styles, minor bugs are present but required clients opinion on the color scheme.

--- a/src/app/admin-parts/PartsPage.css
+++ b/src/app/admin-parts/PartsPage.css
@@ -12,7 +12,7 @@ body {
 .main {
   flex: 1;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: var(--current-bg);
   overflow-y: auto;
   max-height: 100vh;
 }
@@ -22,7 +22,7 @@ body {
   font-weight: bold;
   margin-top: 0;
   margin-bottom: 30px;
-  color: black;
+  color: var(--current-text);
 }
 
 /* Container + cards */
